--- a/p3-the-works/Cargo.toml
+++ b/p3-the-works/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "basic"
+name = "p3-the-works"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,7 +10,11 @@ nu-protocol = { workspace = true }
 nu-cmd-lang = { workspace = true }
 nu-engine = { workspace = true }
 nu-parser = { workspace = true }
+tokio = { version = "1.28", features = ["full"] }
+ctrlc = "3.4.4"
 
 [dev-dependencies]
 assert_cmd = { workspace = true }
 predicates = { workspace = true }
+nix = { version = "0.28.0", features = ["process", "signal"] }
+sysinfo = "0.35.0"
